--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "autoprefixer": "^9.8.6",
     "css-loader": "^4.3.0",
+    "postcss-hexrgba": "^2.0.1",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^4.0.1",
     "postcss-mixins": "^6.2.3",
